<resources>
    <string name="app_name">Журнал звонков</string>
    <string name="website">www.EasySales.com</string>
    <string name="my_number">+79001234567</string>
    <string name="refresh">Обновить</string>
    <string name="packageName">com.example.drmiller.calllog</string>
    <string name="From">От кого:</string>
    <string name="To">Кому:</string>
    <string name="State">Статус:</string>
    <string name="Duration">Длительность:</string>
    <string name="BeginCall">Начало:</string>
    <string name="EndCall">Окончание:</string>
    <string name="CallRecordFile">Файл разговора:</string>
    <string name="Play">Воспроизвести</string>
    <string name="Stop">Остановить</string>
    <string name="Incoming">Входящий</string>
    <string name="Outgoing">Исходящий</string>
    <string name="Missing">Пропущеный</string>
    <string name="Open">Открыть</string>
    <string name="callinvoke">Позвонить</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3917188775488153/6974813223</string>
    <string name="Estimate">Оценить</string>
    <string name="Calls">Звонки</string>
    <string name="Settings">Настройки</string>
    <string-array name="mainNavMenu">
        <item>Звонки</item>
        <item>Настройки</item>
        <item>Оценить!</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ClearCallHistory">Очистить историю</string>
    <string name="settingsPhoneNumber">Телефон</string>
    <string name="settingsPhoneNumberDescription">Введите ваш номер телефона</string>
    <string name="settingsCallRecord">Запись разговоров</string>
    <string name="settingsCallRecordDescription">Вести запись разговоров</string>
    <string name="settingsGroupSynchronize">Настройки синхронизации</string>
    <string name="settingsSynchronize">Синхронизация</string>
    <string name="settingsSynchronizeDescription">Синхронизация вызовов с сервером</string>
    <string name="settingsWifiOnly">Только WiFi</string>
    <string name="settingsWifiOnlyDescription">Использовать только WiFi соединение</string>
    <string name="settingsServerAddress">Адрес сервера</string>
    <string name="settingsServerAddressDescription">Введите адрес сервера - приемника</string>
    <string name="settingsSyncPeriod">Период синхронизации (мин)</string>
    <string name="settingsSyncPeriodDescription">Введите Период синхронизации в минутах</string>
    <string name="callVoiceRecording">Производится запись разговора</string>
    <string name="settingsPhoneNumberSummary">Ваш номер телефона</string>

</resources>
